# fastapi-docs-mcp

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  main.py  pyproject.toml  test_tools.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-approve-dependabot.yml  codeql.yml  dependabot-risk-labels.yml  publish.yml  test.yml
bench/: after.json  before.json  benchmark.py  latest.json  token-report.md
docs/: DESIGN.md  MODEL-COST-ANALYSIS.md
src/fastapi_docs_mcp/: __init__.py  cache.py  config.py  content.py  html.py  http.py  markdown.py  server.py  sitemap.py  tools.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_main.py
