[project]
name = "fastapi-docs-mcp"
version = "2.0.0"
description = "MCP server for real-time FastAPI documentation access"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["fastapi", "mcp", "documentation", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=3.4.2,<3.5",
    "httpx~=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-cov~=7.1",
    "bandit~=1.9",
    "ruff~=0.15",
    "mypy~=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_docs_mcp"]
force-include = { "main.py" = "main.py" }

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["fastapi_docs_mcp", "main"]

[tool.ruff.lint.per-file-ignores]
# Pytest fixtures are passed by name for their side effects, which ARG flags.
"tests/**" = ["ARG001", "ARG002"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
# Live, network-dependent tests are opt-in: run with `-m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: tests that hit the live network (deselected by default)",
]

[tool.bandit]
# No global skips — B105 false positives are suppressed inline with # nosec B105
